syntax = "proto3";

package api;

message Record {
  int64 Timestamp = 1;
  bytes Topic = 2;
  bytes Payload = 3;
  bool Retained = 4;
  string Sender = 5;
}

message PutRecordsRequest { repeated Record Records = 1; }
message PutRecordsResponse {}
message GetRecordsRequest {
  int64 FromOffset = 1;
  int64 FromTimestamp = 2;
  repeated bytes Patterns = 3;
  bool Watch = 4;
  int64 MaxRecordCount = 5;
}
message GetRecordsResponse { repeated Record Records = 1; }
message LoadResponse {
  int64 StartedAt = 1;
  int64 ProgressBytes = 2;
  int64 TotalBytes = 3;
}

message TopicMetadata {
  bytes Name = 1;
  uint64 MessageCount = 2;
  Record LastRecord = 3;
  uint64 SizeInBytes = 4;
  string GuessedContentType = 5;
}

message ListTopicsRequest { bytes Pattern = 1; }
message ListTopicsResponse { repeated TopicMetadata TopicMetadatas = 1; }

message GetTopicsRequest {
  int64 FromOffset = 1;
  int64 FromTimestamp = 2;
  bytes Pattern = 3;
  bool Watch = 4;
}
message GetTopicsResponse { repeated Record Records = 1; }

service Messages {
  rpc PutRecords(PutRecordsRequest) returns (PutRecordsResponse) {}
  rpc GetRecords(GetRecordsRequest) returns (stream GetRecordsResponse) {}
  rpc ListTopics(ListTopicsRequest) returns (ListTopicsResponse) {}
  rpc GetTopics(GetTopicsRequest) returns (stream GetTopicsResponse) {}
}

message SSTRequest {
  string Stream = 1;
  uint64 Shard = 2;
  uint64 ToOffset = 3;
  uint64 FromOffset = 4;
};
message SSTResponseChunk { bytes Chunk = 1; };
message LoadRequest {
  string Stream = 1;
  uint64 Shard = 2;
  string SourceURL = 3;
}

message DumpRequest {
  string Stream = 1;
  uint64 Shard = 2;
  string DestinationURL = 3;
}
message DumpResponse {
  int64 StartedAt = 1;
  int64 ProgressBytes = 2;
  int64 TotalBytes = 3;
}

message ShardMetadata {
  uint64 ID = 1;
  uint64 SegmentCount = 2;
  uint64 CurrentOffset = 3;
  uint64 StoredBytes = 4;
}
message StreamMetadata {
  string Name = 1;
  repeated ShardMetadata ShardMetadatas = 2;
}
message ListStreamsRequest {}
message ListStreamsResponse { repeated StreamMetadata StreamMetadatas = 1; }

service Streams {
  rpc ListStreams(ListStreamsRequest) returns (ListStreamsResponse) {}
  rpc Load(LoadRequest) returns (stream LoadResponse) {}
  rpc SST(SSTRequest) returns (stream SSTResponseChunk) {}
  rpc Dump(DumpRequest) returns (stream DumpResponse) {}
}

message EventAttribute {
  string Key = 1;
  string Value = 2;
}
message Event {
  int64 Timestamp = 1;
  string Tenant = 2;
  string Service = 3;
  string Kind = 4;
  repeated EventAttribute Attributes = 5;
}
message PutEventRequest {
  int64 Timestamp = 1;
  string Tenant = 2;
  string Service = 3;
  string Kind = 4;
  repeated EventAttribute Attributes = 5;
}

message PutEventResponse {}
message GetEventRequest {
  string Tenant = 1;
  int64 FromOffset = 2;
  int64 FromTimestamp = 3;
  bool Watch = 4;
}
message GetEventResponse { repeated Event Events = 1; }

service Events {
  rpc PutEvent(PutEventRequest) returns (PutEventResponse) {}
  rpc GetEvents(GetEventRequest) returns (stream GetEventResponse) {}
}
